8245126: Kitchensink fails with: assert(!method->is_old()) failed: Should not be installing old methods

Fix the method->is_old() assert

Reviewed-by: dlong, chagedorn